css/theme.css
/* ... */
body textarea:active,
body textarea:focus {
	background: transparent;
}
body input[type="password"] {
	border-bottom: solid 1px rgba(255, 255, 255, .1);
}

body textarea {
	height: 150px;
	resize: none;
	padding: 14px 19px 16px 19px;
}

body select,
body select:focus {
	position: relative;
	border-radius: 0;
	outline: none!important;
	background: transparent;
}
select:before {
	content: '';
	position: absolute;
	display: block;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 5px 5px 0 5px;
	right: 10px;
	top: 10px;
}

body .cherga_widget_button a.cherga-button,
.cherga_button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
	padding: 15px 20px 15px 20px;
	height: 50px;
	line-height: 20px;
	border: none;
	text-transform: uppercase;
	letter-spacing: 0.6px;
	border-radius: 0;
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	display: inline-block;
	vertical-align: middle;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	transition: background 400ms, color 400ms, border 400ms;
}
body .cherga_widget_button a.cherga-button {
	font-size: 14px;
	font-weight: 700;
	color: #ffffff;
}
body .cherga_widget_button a.cherga-button:hover {
	background: #3a3e43 !important;
	opacity: .9;
}
body button.pswp__button,
body button.pswp__button:hover {
	background-color: transparent;
}
body .cherga_widget_button a.cherga-button span {
	border: none;
	text-transform: uppercase;
	letter-spacing: 0.6px;
	border-radius: 0;
}
body .cherga_widget_button a.cherga-button.cherga-size-md {
	padding: 15px 19px 19px 20px;
}
body .cherga_widget_button a.cherga-button span {
	padding: 0;
}
.cherga_load_more_button_wrapper {
	text-align: center;
	padding-bottom: 30px;
}
.cherga_load_more_button_wrapper.all_posts_loaded {
	padding-bottom: 0!important;
}
.cherga_load_more_button {
	height:50px;
	padding: 15px 19px 15px 21px;
	margin: 30px auto 30px auto;
}
input,
textarea,
button {
	-webkit-appearance: none;
	outline: none;
}
input[type="radio"] {
	-webkit-appearance: radio;
}
input[type="checkbox"] {
	-webkit-appearance: checkbox;
}

input:focus,
input:active,
textarea:focus,
body {
	outline: none !important;
	outline-offset: 0 !important;
	box-shadow: none;
}

input::-moz-placeholder {
	opacity: 1;
	text-transform: uppercase;
}

textarea::-moz-placeholder {
	opacity: 1;
	text-transform: uppercase;
	letter-spacing: 0.1px;
}

input::-webkit-input-placeholder {
	opacity: 1;
	text-transform: uppercase;
}

textarea::-webkit-input-placeholder {
	opacity: 1;
	text-transform: uppercase;
}

input::-ms-input-placeholder {
	opacity: 1;
	text-transform: uppercase;
}

textarea::-ms-input-placeholder {
	opacity: 1;
	text-transform: uppercase;
}

input:focus::-webkit-input-placeholder {
	color: transparent;
	opacity: 0;
}

input:focus::-moz-placeholder {
	color: transparent;
	opacity: 0;
}

input:focus::-ms-input-placeholder {
	color: transparent;
	opacity: 0;
}

textarea:focus::-webkit-input-placeholder {
	color: transparent;
	opacity: 0;
}

textarea:focus::-moz-placeholder {
	color: transparent;
	opacity: 0;
}

textarea:focus::-ms-input-placeholder {
	color: transparent;
	opacity: 0;
}
span.wpcf7-not-valid-tip {
	margin: -1px 0 13px 0;
	font-size: 12px;
	line-height: 12px;
	letter-spacing: 0.7px;
	text-transform: uppercase;
}
div.wpcf7-validation-errors {
	border: none;
	text-transform: uppercase;
	padding: 7px 0 0 0;
	margin: 0;
}
div.wpcf7 .ajax-loader {
	display:inline-block;
	vertical-align: middle;
	margin-left: 10px;
	display: none;
}

/* ----------------------------------- */
/* ---------- Custom Select ---------- */
/* ----------------------------------- */
.select-hidden {
	display: none;
	visibility: hidden;
}
.cherga_select_wrapper {
	cursor: pointer;
	display: inline-block;
	position: relative;
	color: #979797;
	width: 100%;
	height: 50px;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.cherga_select {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	padding: 11px 35px 9px 12px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	transition: all 0.2s ease-in;
	white-space: nowrap;
}
.cherga_select:before {
	content:'\f107';
	display: block;
	font-family: 'FontAwesome', sans-serif;
	font-size: 16px;
	line-height: 20px;
	position: absolute;
	top: 13px;
	right: 13px;
	z-index: 3;
}
.cherga_select.active:before {
	top: 13px;
	content:'\f106';
}

.cherga_tiny {
	font-size: 16px;
	line-height: 26px;
	font-weight: 400;
	color: #a0a7ae;
}

.cherga_tiny .cherga_select_wrapper ul.select-options {
	display: none;
	border: solid 2px #2e3032;
	border-top: none;
	background: #171717;
	position: absolute;
	top: 100%;
	right: 0;
	left: 0;
	z-index: 999;
	margin: 0;
	padding: 10px 0;
	list-style: none;
	overflow: hidden;
	text-align: left;
}
.cherga_tiny .cherga_select_wrapper ul.select-options.long_select {
	overflow-y: scroll;
}
.cherga_tiny .cherga_select_wrapper ul.select-options li {
	font-size: 14px;
	line-height: 24px;
	margin: 0;
	padding: 12px 10px;
	transition: color 300ms, background 300ms;
}
.select-options li[rel="hide"] {
	display: none;
}

/* ----------------------------------- */
/* ---------- Contact Forms ---------- */
/* ----------------------------------- */
.cherga_reserve_form {
	text-align: center;
}

.cherga_reserve_form input[type="text"],
.cherga_reserve_form textarea {
	margin-bottom: 20px !important;
}

.cherga_reserve_submit {
	display: inline-block;
	position: relative;
}

.cherga_reserve_submit:after {
	content: "\f105";
	font-family: "FontAwesome", sans-serif;
	cursor: pointer;
	position: absolute;
	top: 7px;
	right: 15px;
	-webkit-transition: all .3s;
	transition: all .3s;
}

.cherga_reserve_submit input[type="submit"] {
	padding: 6px 30px 6px 17px;
	background: transparent;
	-webkit-transition: all .3s;
	transition: all .3s;
	position: relative;
}
/* ... */

